# invop

./: README.md  constants.py  lineas_49.zpl  main.py  max_flow.py  prim.py  pyproject.toml  steiner.py  tres_en_linea.zpl  utils.py
graphs/: constants.py  graph.py  main_tp.py
graphs/data/: microapple.input
notebooks/: linProg.ipynb
old/: constants.py  main.py  utils.py
simplex/: Informe.tex  sol1.txt  sol2.txt  sol3.txt  sol4.txt  subasta_1.zpl  subasta_2.zpl  subasta_3.zpl  subasta_4.zpl  subastas_wifi.zpl
