[tool.poetry]
name = "invop"
version = "0.1.0"
description = ""
authors = ["José Castagnino"]

[tool.poetry.dependencies]
python = "^3.8.5"
numpy = "^1.19.3"
pandas = "^1.1.4"
plotly = "^4.12.0"
scipy = "^1.5.3"
seaborn = "^0.11.0"
ipython = "^7.19.0"
notebook = "^6.1.4"
voila = "^0.2.4"
ipywidgets = "^7.5.1"
nbconvert = "^6.0.7"
black = "^20.8b1"
pylint = "^2.6.0"
pdbpp = "^0.10.2"
networkx = "^2.5"
jsonschema = "3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
